--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Домашнее задание: пример</title>
+	<title>Домашнее задание: вариант №19</title>
 	<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.24.1.css">
 	<script src="https://code.jquery.com/qunit/qunit-2.24.1.js"></script>
     <script>
@@ -16,7 +16,9 @@
 <div id="qunit-fixture"></div>
 
 <script src="source/max.js"></script>
+<script src="source/sortByLength.js"></script>
 <script src="test/max.js"></script>
+<script src="test/sortByLength.js"></script>
 
 </body>
 </html>
