--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 
-<script src="source/max.js"></script>
-<script src="test/max.js"></script>
+<script src="source/templateEngine.js"></script>
+<script src="test/templateEngine.js"></script>
 
 </body>
 </html>
