--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <script src="source/emailAnalyzer.js"></script>
 <script src="test/emailAnalyzer.js"></script>
-
+<script src="source/max.js"></script>
+<script src="test/max.js"></script>
 </body>
 </html>
