--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <div id="qunit-fixture"></div>
 
 <script src="source/max.js"></script>
+<script src="source/emailAnalyzer.js"></script>
 <script src="test/max.js"></script>
+<script src="test/emailAnalyzer.js"></script>
 
 </body>
 </html>
